--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="utf-8">
     <title>kornicameister @ web</title>
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="refresh" content="5; url=https://kornicameister.github.io/korni/">
   </head>
-  <body>
-    <!--[if lt IE 10]>
-    <p class="browsehappy">
-      You are using an <strong>outdated</strong> browser.
-      Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your
-      experience.</p>
-    <![endif]-->
-
-    <h1>Initial test</h1>
-
-  </body>
+  <body></body>
 </html>
