--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="refresh" content="5; url=https://kornicameister.github.io/korni/">
   </head>
-  <body></body>
+  <body>
+    <h1>Hello @ kornicameister</h1>
+  </body>
 </html>
